@@ -1,3 +1,8 @@
+Wed Jul 30 22:43:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	  - Disabled some buttons that aren't yet setup to be used.
+
 Wed Jul 30 22:42:14 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
